<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dismiss_overlay_button_label">Quit</string>
    <string name="account_edit_change_account_image">Change Account Image</string>
    <string name="account_edit_choose_from_storage">Choose Photo</string>
    <string name="account_edit_email_saved">Email Address Saved</string>
    <string name="account_edit_enter_email">Enter Your Email</string>
    <string name="account_edit_enter_name">Enter Your Name</string>
    <string name="account_edit_image_saved">Image Saved</string>
    <string name="account_edit_invalid_email">Invalid Email Address</string>
    <string name="account_edit_invalid_email1">Failed Level 1</string>
    <string name="account_edit_invalid_name">Invalid Name</string>
    <string name="account_edit_name">Name</string>
    <string name="account_edit_name_saved">Name Saved</string>
    <string name="account_edit_no_changes">No Changes Saved</string>
    <string name="account_edit_take_photo">Take Photo</string>
    <string name="action_settings">Settings</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_no_sound">Alerts will not sound</string>
    <string name="alert_schedule_days">Schedule Days</string>
    <string name="alert_schedule_summary">Alert Schedule Summary</string>
    <string name="alert_schedule_time">Time</string>
    <string name="alert_scheduled_no_sound">Scheduled alerts will not sound</string>
    <string name="alert_scheduled_sound">Scheduled alerts will sound</string>
    <string name="alert_settings_alert_schedule">Alert Schedule</string>
    <string name="alert_settings_always_sound">Always Sound</string>
    <string name="alert_settings_always_sound_description">"Allow alerts to sound even when Mute or Do Not Disturb are on. These can't be silenced: Urgent Low, Transmitter Failure, and Sensor Failure."</string>
    <string name="alert_settings_text_every_30_mins">every 30 minutes</string>
    <string name="alert_text_off">OFF</string>
    <string name="alert_text_on">ON</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_done">Done</string>
    <string name="dex_alerts_for_more_than">For More Than</string>
    <string name="dex_alerts_notify_me_below">Notify Me Below</string>
    <string name="dex_alerts_repeat">Repeat</string>
    <string name="dex_common_triple_dashes">---</string>
    <string name="dex_event_entry_carbs">Carbs</string>
    <string name="dex_event_entry_event_time">Event Time</string>
    <string name="dex_event_entry_exercise">Exercise</string>
    <string name="dex_event_entry_exercise_duration">Duration</string>
    <string name="dex_event_entry_exercise_intensity">Intensity</string>
    <string name="dex_event_entry_exercise_intensity_heavy">Heavy</string>
    <string name="dex_event_entry_exercise_intensity_light">Light</string>
    <string name="dex_event_entry_exercise_intensity_medium">Medium</string>
    <string name="dex_event_entry_exercise_title">Exercise Event</string>
    <string name="dex_event_entry_health">Health</string>
    <string name="dex_event_entry_insulin">Insulin</string>
    <string name="dex_general_help">Help</string>
    <string name="dex_meter_entry_is_this_correct">Is this correct?</string>
    <string name="dex_settings_device_info">Device Info</string>
    <string name="dex_settings_software_number">Software Number</string>
    <string name="dex_share_hours">%1$d hours</string>
    <string name="help_menu_copyright_date">Copyright © 2018 Dexcom, Inc + Jaz Mod.</string>
    <string name="help_menu_copyright_text">Copyright (Jaz Mod)</string>
    <string name="help_menu_text_3">Insertion Time</string>
    <string name="help_menu_text_31">No sensor inserted</string>
    <string name="help_menu_text_37">"What's New"</string>
    <string name="help_menu_text_38">Setup Wizard</string>
    <string name="help_menu_text_39">Safety Statements</string>
    <string name="help_menu_text_4">Last Calibration</string>
    <string name="help_menu_text_40">User Guide</string>
    <string name="help_menu_text_41">Videos</string>
    <string name="help_menu_text_42">Frequently Asked Questions</string>
    <string name="help_menu_text_43">Contact Dexcom</string>
    <string name="help_menu_text_44">About</string>
    <string name="help_menu_text_6">Software Revision</string>
    <string name="help_menu_text_67">Version</string>
    <string name="help_menu_text_69">Legal</string>
    <string name="help_menu_text_7">UDI</string>
    <string name="help_menu_text_70">System Compatibility</string>
    <string name="main_screen_error_enter_bg_meter_values">Hey Jaz, Enter BG Values:</string>
    <string name="main_screen_error_text_10">• Using the exact number from your meter</string>
    <string name="main_screen_error_text_11">"• Using only fingerstick blood glucose values
"</string>
    <string name="main_screen_error_text_12">"Don't enter BG Meter Values:"</string>
    <string name="main_screen_error_text_13">• After you have taken acetaminophen (such as Tylenol®)</string>
    <string name="main_screen_error_text_14">• If your value is higher than %1$s %2$s or lower than %3$s %4$s</string>
    <string name="main_screen_error_text_20">Transmitter insertion</string>
    <string name="main_screen_error_text_22">Two possible causes:</string>
    <string name="main_screen_error_text_23">"
Taking medications containing acetaminophen, such as Tylenol®. Glucose information is usually not available for up to three hours after taking acetaminophen"</string>
    <string name="main_screen_error_text_24">"
Make sure your transmitter is properly inserted into your sensor pod"</string>
    <string name="main_screen_error_text_25">Wait three hours while the transmitter tries to fix the error. Do not enter another BG during this time.</string>
    <string name="main_screen_error_text_26">Error still present after three hours</string>
    <string name="main_screen_error_text_8">• After washing and drying your hands</string>
    <string name="main_screen_error_text_9">• Within 5 minutes</string>
    <string name="main_screen_text_29">Stop Sensor</string>
    <string name="main_screen_text_30">Are you sure you want to stop your sensor?</string>
    <string name="main_screen_text_31">You will not receive alerts or alarms after you stop your sensor, unless you replace your sensor.</string>
    <string name="main_screen_text_32">Sensor removal</string>
    <string name="main_screen_text_33">Sensor insertion</string>
    <string name="main_screen_text_34">STOP SESSION</string>
    <string name="sensor_failed_help1">Sensor removal help</string>
    <string name="sensor_failed_help2">Sensor insertion help</string>
    <string name="share_mgdl">%1$s %2$s</string>
    <string name="share_screen_settings_text_15">"There can be many different reasons why your mobile device is not sharing.
Make sure:"</string>
    <string name="share_screen_settings_text_16">1. Your Wi-Fi or cellular connection is \"on\"</string>
    <string name="share_screen_settings_text_17">2. You are in an area that has cellular reception</string>
    <string name="share_screen_settings_text_18">3. You can access the web via a browser, confirming you currently have internet access</string>
    <string name="share_screen_settings_text_19">4. If using a mobile device, your cell phone plan allows internet access while on a phone call</string>
    <string name="share_screen_settings_text_20">5. Airplane mode is \"off\"</string>
    <string name="share_screen_settings_text_21">6. Bluetooth is \"on\"</string>
    <string name="share_screen_settings_text_22">7. Sharing is \"enabled\" on the previous screen</string>
    <string name="share_screen_settings_text_23">8. You have active Followers (who accepted your Share invitation) listed in the Followers list on the previous screen</string>
    <string name="share_screen_text_35">Allow trend graph view</string>
    <string name="share_screen_text_39">Notify Below</string>
    <string name="share_screen_text_45">Notify Above</string>
    <string name="share_screen_text_46">No More Data</string>
    <string name="software_number">SW10940</string>
    <string name="sound_alert_text">Sound</string>
    <string name="time_30">30 minutes</string>
    <string name="urgent_low_alarm_message_text">The \"Urgent Low Glucose Alarm\" notification level and repeat setting cannot be changed or turned off. Only the sound setting can be changed.</string>
    <string name="urgent_low_alarm_text">Urgent Low</string>
    <string name="urgent_low_glucose_alarm_text">Urgent Low Glucose Alarm</string>
    <string name="user_high_alert_text">High</string>
    <string name="user_low_alert_text">Low</string>
</resources>